--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,16 @@ dominate>=2.5.2
 Flask>=1.1.2
 Flask-Bootstrap>=3.3.7.1
 Flask-WTF>=0.14.3
+greenlet>=1.1.0
+gunicorn>=20.1.0
 idna>=2.10
 itsdangerous>=1.1.0
 Jinja2>=2.11.2
 MarkupSafe>=1.1.1
 numpy>=1.21.1
 Pillow>=8.3.2
+pip>=20.2.3
+psycopg2-binary>=2.9.1
 python-dotenv>=0.19.0
 requests>=2.24.0
 urllib3>=1.25.10
