Exclude styles map from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+static/styles/css/style.css.map
+static/styles/scss/style.css.map
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
