--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,17 @@ gunicorn~=20.1.0
 idna~=2.10
 itsdangerous~=1.1.0
 Jinja2~=2.11.2
+lxml~=4.9.1
 MarkupSafe~=1.1.1
 numpy~=1.21.1
-Pillow~=8.3.2
-pip~=20.2.3
+Pillow~=9.2.0
+pip~=22.2.1
 psycopg2-binary~=2.9.1
 pycparser~=2.21
 pymongo~=4.1.1
 python-dotenv~=0.19.0
+reportlab~=3.6.11
 requests~=2.24.0
+svglib~=1.3.0
 urllib3~=1.25.10
 visitor~=0.1.3
