--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi~=1.15.0
 chardet~=3.0.4
 click~=7.1.2
 cryptography~=36.0.2
+dnspython~=2.2.1
 dominate~=2.5.2
 Flask~=1.1.2
 Flask-Bootstrap~=3.3.7.1
