--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dominate~=2.5.2
 Flask~=1.1.2
 Flask-Bootstrap~=3.3.7.1
 Flask-WTF~=0.14.3
+flask-compress~=1.12
 greenlet~=1.1.0
 gunicorn~=20.1.0
 idna~=2.10
